Fix tooltips flickering

--- a/AutoSats/wwwroot/css/site.scss
+++ b/AutoSats/wwwroot/css/site.scss
@@ -1,4 +1,9 @@
-﻿#blazor-error-ui {
+﻿html {
+    width: 100vw;
+    overflow: hidden;
+}
+
+#blazor-error-ui {
     display: none;
 }
 
